[package]
name = "lddtopo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lddtree = "0.3.2"
petgraph = "0.6.2"
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1",  features = ["derive"] }
serde_json = { version = "1"}
log = "0.4.17"
env_logger = "0.10.0"